# tableaux

./: .Rbuildignore  .gitignore  DESCRIPTION  README.md
R/: tableaux.R  zzz.R
inst/Haskell/: README.md  tableaux.cabal
inst/Haskell/src/: Tableaux.hs
